gcc/gcc/testsuite/algol60.dg/fail/stringvar.a60
'comment' { dg-do compile } ;
'begin'
 'string' a; 'comment' { dg-error "string" } ;
'end';
